[package]
name = "qptrie"
version = "0.2.3"
description = "A QP-Trie implementation for Rust"
license = "ISC"
authors = ["Frank Denis <github@pureftpd.org>"]
homepage = "https://github.com/jedisct1/rust-qptrie"
repository = "https://github.com/jedisct1/rust-qptrie"
categories = ["algorithms", "data-structures"]

[badges]
travis-ci = { repository = "jedisct1/rust-qptrie" }
appveyor = { repository = "jedisct1/rust-qptrie" }

[dependencies]
debug_unreachable = "0.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
