[package]
name = "qptrie"
version = "0.2.4"
description = "A QP-Trie implementation for Rust"
license = "ISC"
authors = ["Frank Denis <github@pureftpd.org>"]
homepage = "https://github.com/jedisct1/rust-qptrie"
repository = "https://github.com/jedisct1/rust-qptrie"
categories = ["algorithms", "data-structures"]

[badges]
appveyor = { repository = "jedisct1/rust-qptrie" }

[dependencies]
new_debug_unreachable = "1.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
